--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -459,6 +459,13 @@ crypto_libbitcoin_crypto_base_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 crypto_libbitcoin_crypto_base_a_SOURCES = \
   crypto/aes.cpp \
   crypto/aes.h \
+  crypto/argon2/include/argon2.h \
+  crypto/argon2/src/core.c \
+  crypto/argon2/src/blake2/blake2b.c \
+  crypto/argon2/src/encoding.c \
+  crypto/argon2/src/hash.c \
+  crypto/argon2/src/argon2.c \
+  crypto/argon2/src/ref.c
   crypto/chacha_poly_aead.h \
   crypto/chacha_poly_aead.cpp \
   crypto/chacha20.h \
