Makefile.am の更新

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,6 +19,7 @@ if BUILD_BITCOIN_LIBS
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libbitcoinconsensus.pc
 endif
+CRYPTO_LIBS += $(top_builddir)/src/crypto/argon2/libargon2.a
 
 BITCOIND_BIN=$(top_builddir)/src/$(BITCOIN_DAEMON_NAME)$(EXEEXT)
 BITCOIN_QT_BIN=$(top_builddir)/src/qt/$(BITCOIN_GUI_NAME)$(EXEEXT)
