--- a/src/Makefile.qttest.include
+++ b/src/Makefile.qttest.include
@@ -2,8 +2,11 @@
 # Distributed under the MIT software license, see the accompanying
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 
-bin_PROGRAMS += qt/test/test_litecoin-qt
+bin_PROGRAMS += qt/test/test_rincoin-qt
 TESTS += qt/test/test_rincoin-qt
+
+# Define the canonical test binary name
+test_rincoin_qt_PROGRAM = test_rincoin-qt
 
 TEST_QT_MOC_CPP = \
   qt/test/moc_apptests.cpp \
@@ -26,10 +29,10 @@ TEST_QT_H = \
   qt/test/util.h \
   qt/test/wallettests.h
 
-qt_test_test_rincoin_qt_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BITCOIN_QT_INCLUDES) \
+test_rincoin_qt_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BITCOIN_QT_INCLUDES) \
   $(QT_INCLUDES) $(QT_TEST_INCLUDES)
 
-qt_test_test_rincoin_qt_SOURCES = \
+test_rincoin_qt_SOURCES = \
   qt/test/apptests.cpp \
   qt/test/compattests.cpp \
   qt/test/rpcnestedtests.cpp \
@@ -37,28 +40,30 @@ qt_test_test_rincoin_qt_SOURCES = \
   qt/test/uritests.cpp \
   qt/test/util.cpp \
   $(TEST_QT_H)
+
 if ENABLE_WALLET
-qt_test_test_rincoin_qt_SOURCES += \
+test_rincoin_qt_SOURCES += \
   qt/test/addressbooktests.cpp \
   qt/test/wallettests.cpp \
   wallet/test/wallet_test_fixture.cpp
 endif # ENABLE_WALLET
 
-nodist_qt_test_test_rincoin_qt_SOURCES = $(TEST_QT_MOC_CPP)
+nodist_test_rincoin_qt_SOURCES = $(TEST_QT_MOC_CPP)
 
-qt_test_test_rincoin_qt_LDADD = $(LIBBITCOINQT) $(LIBBITCOIN_SERVER) $(LIBTEST_UTIL)
+test_rincoin_qt_LDADD = $(LIBBITCOINQT) $(LIBBITCOIN_SERVER) $(LIBTEST_UTIL)
 if ENABLE_WALLET
-qt_test_test_rincoin_qt_LDADD += $(LIBBITCOIN_UTIL) $(LIBBITCOIN_WALLET)
+test_rincoin_qt_LDADD += $(LIBBITCOIN_UTIL) $(LIBBITCOIN_WALLET)
 endif
 if ENABLE_ZMQ
-qt_test_test_rincoin_qt_LDADD += $(LIBBITCOIN_ZMQ) $(ZMQ_LIBS)
+test_rincoin_qt_LDADD += $(LIBBITCOIN_ZMQ) $(ZMQ_LIBS)
 endif
-qt_test_test_rincoin_qt_LDADD += $(LIBBITCOIN_CLI) $(LIBBITCOIN_COMMON) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) \
+test_rincoin_qt_LDADD += $(LIBBITCOIN_CLI) $(LIBBITCOIN_COMMON) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) $(LIBMEMENV) $(LIBMW) $(MWEB_LIBS) $(BOOST_LIBS) $(QT_DBUS_LIBS) $(QT_TEST_LIBS) $(QT_LIBS) \
   $(QR_LIBS) $(BDB_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(LIBSECP256K1) \
   $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS) $(SQLITE_LIBS)
-qt_test_test_rincoin_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) $(PTHREAD_FLAGS)
-qt_test_test_rincoin_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
+
+test_rincoin_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) $(PTHREAD_FLAGS)
+test_rincoin_qt_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
 CLEAN_RINCOIN_QT_TEST = $(TEST_QT_MOC_CPP) qt/test/*.gcda qt/test/*.gcno
 
@@ -70,4 +75,4 @@ test_rincoin_qt_check : qt/test/test_rincoin-qt$(EXEEXT) FORCE
 	$(MAKE) check-TESTS TESTS=$^
 
 test_rincoin_qt_clean: FORCE
-	rm -f $(CLEAN_litecoin_QT_TEST) $(qt_test_test_rincoin_qt_OBJECTS)
+	rm -f $(CLEAN_RINCOIN_QT_TEST) $(test_rincoin_qt_OBJECTS)
