--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -305,40 +305,40 @@ $(QT_MOC): $(QT_FORMS_H)
 $(qt_libbitcoinqt_a_OBJECTS) $(qt_bitcoin_qt_OBJECTS) $(bitcoin_gui_OBJECTS) : | $(QT_MOC)
 
 # bitcoin-qt and bitcoin-gui binaries #
-litecoin_qt_cppflags = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BITCOIN_QT_INCLUDES) \
+rincoin_qt_cppflags = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BITCOIN_QT_INCLUDES) \
   $(QT_INCLUDES) $(QR_CFLAGS)
-litecoin_qt_cxxflags = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
+rincoin_qt_cxxflags = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
-litecoin_qt_sources = qt/main.cpp
+rincoin_qt_sources = qt/main.cpp
 if TARGET_WINDOWS
-  litecoin_qt_sources += $(BITCOIN_RC)
+  rincoin_qt_sources += $(BITCOIN_RC)
 endif
-litecoin_qt_ldadd = qt/libbitcoinqt.a $(LIBBITCOIN_SERVER)
+rincoin_qt_ldadd = qt/libbitcoinqt.a $(LIBBITCOIN_SERVER)
 if ENABLE_WALLET
-litecoin_qt_ldadd += $(LIBBITCOIN_UTIL) $(LIBBITCOIN_WALLET)
+rincoin_qt_ldadd += $(LIBBITCOIN_UTIL) $(LIBBITCOIN_WALLET)
 endif
 if ENABLE_ZMQ
-litecoin_qt_ldadd += $(LIBBITCOIN_ZMQ) $(ZMQ_LIBS)
+rincoin_qt_ldadd += $(LIBBITCOIN_ZMQ) $(ZMQ_LIBS)
 endif
-litecoin_qt_ldadd += $(LIBBITCOIN_CLI) $(LIBBITCOIN_COMMON) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) $(LIBLEVELDB_SSE42) $(LIBMEMENV) \
+rincoin_qt_ldadd += $(LIBBITCOIN_CLI) $(LIBBITCOIN_COMMON) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_CRYPTO) $(LIBUNIVALUE) $(LIBLEVELDB) $(LIBLEVELDB_SSE42) $(LIBMEMENV) \
   $(LIBMW) $(MWEB_LIBS) $(BOOST_LIBS) $(QT_LIBS) $(QT_DBUS_LIBS) $(QR_LIBS) $(BDB_LIBS) $(MINIUPNPC_LIBS) $(LIBSECP256K1) $(CRYPTO_LIBS) \
   $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS) $(SQLITE_LIBS)
 rincoin_qt_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(QT_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) $(PTHREAD_FLAGS)
-litecoin_qt_libtoolflags = $(AM_LIBTOOLFLAGS) --tag CXX
+rincoin_qt_libtoolflags = $(AM_LIBTOOLFLAGS) --tag CXX
 
-qt_litecoin_qt_CPPFLAGS = $(litecoin_qt_cppflags)
-qt_litecoin_qt_CXXFLAGS = $(litecoin_qt_cxxflags)
-qt_rincoin_qt_SOURCES = $(litecoin_qt_sources)
-qt_rinoin_qt_LDADD = $(litecoin_qt_ldadd)
+qt_rincoin_qt_CPPFLAGS = $(rincoin_qt_cppflags)
+qt_rincoin_qt_CXXFLAGS = $(rincoin_qt_cxxflags)
+qt_rincoin_qt_SOURCES = $(rincoin_qt_sources)
+qt_rinoin_qt_LDADD = $(rincoin_qt_ldadd)
 qt_rincoin_qt_LDFLAGS = $(rincoin_qt_LDFLAGS)
-qt_litecoin_qt_LIBTOOLFLAGS = $(litecoin_qt_libtoolflags)
+qt_rincoin_qt_LIBTOOLFLAGS = $(rincoin_qt_libtoolflags)
 
-litecoin_gui_CPPFLAGS = $(litecoin_qt_cppflags)
-litecoin_gui_CXXFLAGS = $(litecoin_qt_cxxflags)
-rincoin_gui_SOURCES = $(litecoin_qt_sources)
-rincoin_gui_LDADD = $(litecoin_qt_ldadd)
+litecoin_gui_CPPFLAGS = $(rincoin_qt_cppflags)
+litecoin_gui_CXXFLAGS = $(rincoin_qt_cxxflags)
+rincoin_gui_SOURCES = $(rincoin_qt_sources)
+rincoin_gui_LDADD = $(rincoin_qt_ldadd)
 litecoin_gui_LDFLAGS = $(rincoin_qt_LDFLAGS)
-litecoin_gui_LIBTOOLFLAGS = $(litecoin_qt_libtoolflags)
+litecoin_gui_LIBTOOLFLAGS = $(rincoin_qt_libtoolflags)
 
 #locale/foo.ts -> locale/foo.qm
 QT_QM=$(QT_TS:.ts=.qm)
@@ -370,7 +370,7 @@ CLEAN_QT = $(nodist_qt_libbitcoinqt_a_SOURCES) $(QT_QM) $(QT_FORMS_H) qt/*.gcda 
 CLEANFILES += $(CLEAN_QT)
 
 bitcoin_qt_clean: FORCE
-	rm -f $(CLEAN_QT) $(qt_libbitcoinqt_a_OBJECTS) $(qt_litecoin_qt_OBJECTS) qt/litecoin-qt$(EXEEXT) $(LIBBITCOINQT)
+	rm -f $(CLEAN_QT) $(qt_libbitcoinqt_a_OBJECTS) $(qt_rincoin_qt_OBJECTS) qt/litecoin-qt$(EXEEXT) $(LIBBITCOINQT)
 
 bitcoin_qt : qt/litecoin-qt$(EXEEXT)
 
